unpackaged/main/default/objects/Contract_Team__c/Contract_Team__c.object-meta.xml
<CustomObject>
    <label>Contract Team</label>
    <nameField>
        <displayFormat>CTM-{000000000}</displayFormat>
        <label>Contract Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>