unpackaged/main/default/objects/Contract_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Growth Rep</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Technical Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Engineer</fullName>
            </value>
            <value>
                <fullName>DFM Engineer</fullName>
            </value>
            <value>
                <fullName>Quoting Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>